# api.yaml
@@ -6,6 +6,8 @@ info:
 servers:
   - url: 'http://44.211.31.44:8080/api/v1'
     description: 'Servidor de desarrollo local'
+security:
+  - ApiKeyAuth: []
 paths:
   /issues:
     get:
@@ -1265,6 +1267,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 components:
+  securitySchemes:
+    ApiKeyAuth:
+      type: apiKey
+      in: header
+      name: X-API-Key
+      description: API key para autenticación
   schemas:
     Issue:
       type: object
