# app/controllers/api/v1/attachments_controller.rb
@@ -1,8 +1,7 @@
 module Api
   module V1
-    class AttachmentsController < ApplicationController
-      # Omitir verificación CSRF para API
-      skip_before_action :verify_authenticity_token
+    class AttachmentsController < BaseController
+      # Ya no es necesario omitir verificación CSRF, se maneja en BaseController
       before_action :set_issue
       require 'aws-sdk-s3'
 
