# app/controllers/api/v1/base_controller.rb
@@ -1,0 +1,16 @@
+module Api
+  module V1
+    class BaseController < ApplicationController
+      include ApiKeyAuthenticatable
+
+      # Desactivar protección CSRF para APIs
+      skip_before_action :verify_authenticity_token, if: :json_request?
+
+      private
+
+      def json_request?
+        request.format.json?
+      end
+    end
+  end
+end
